--- a/docker-volumes/esphome/tempsensornode.yaml
+++ b/docker-volumes/esphome/tempsensornode.yaml
@@ -26,6 +26,11 @@ wifi:
     ssid: "Tempsensornode Fallback Hotspot"
     password: "ucoiAubovxVo"
 
+  manual_ip:
+   static_ip: 192.168.137.11
+   gateway: 192.168.137.1
+   subnet: 255.255.255.0
+
 captive_portal:
     
 i2c:
