--- a/docker-volumes/esphome/p1sn-01.yaml
+++ b/docker-volumes/esphome/p1sn-01.yaml
@@ -1,6 +1,6 @@
 esphome:
-  name: p1sm-01
-  friendly_name: P1SM-01
+  name: p1sn-01
+  friendly_name: P1SN-01
 
 esp32:
   board: esp32-c3-devkitm-1
@@ -13,7 +13,7 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: "taykU7lHYETc8xScEmVLSVba6MrHiWPb00+g2d30I4c="
+    key: "tbykU7lHYETc8xScEmVLSVba6MrHiWPb00+g2d30I4c="
 
 ota:
   password: "191842e63611f4c388d1ab947bf25c3c"
@@ -28,7 +28,26 @@ wifi:
 
 captive_portal:
 
+i2c:
+  sda: 6
+  scl: 7
+
 sensor:
+  - platform: bme280
+    temperature:
+      name: "Temperature"
+    pressure:
+      name: "Pressure"
+    humidity:
+      name: "Humidity"
+    address: 0x76
+    update_interval: 60s
+
+  - platform: bh1750
+    name: "illuminance"
+    address: 0x23
+    update_interval: 60s
+    
   - platform: wifi_signal
     name: p1sm-01 WiFi Signal
     update_interval: 60s
@@ -39,23 +58,6 @@ sensor:
       - lambda: return x / 60.0;
     unit_of_measurement: minutes
     update_interval: 60s
-
-  - platform: adc
-    pin: 3
-    name: "Soil Moisture"
-    unit_of_measurement: "%"
-    device_class: MOISTURE
-    update_interval: 60s
-    attenuation: 11db
-    filters:
-    - calibrate_linear:
-        - 1.10 ->  100.00
-        - 2.44 ->  0.00
-    - lambda: |
-       if (x < 0) return 0;
-       else if (x < 100) return 100;
-       else return (x);
-    accuracy_decimals: 0
 
   - platform: adc
     pin: 2
