--- a/docker-volumes/homeassistant/.gitignore
+++ b/docker-volumes/homeassistant/.gitignore
@@ -6,6 +6,14 @@
 !.gitignore
 !*.md
 
+
+# whitelist folders and subfolders and files
+!themes
+!www
+!www/**
+
+
+
 # Ignore folders.
 .storage
 .cloud
