updated files for mqtt setup

--- a/docker-volumes/mosquitto/config/mosquitto.conf
+++ b/docker-volumes/mosquitto/config/mosquitto.conf
@@ -526,7 +526,8 @@ log_dest file /mosquitto/log/mosquitto.log
 # Defaults to false, unless there are no listeners defined in the configuration
 # file, in which case it is set to true, but connections are only allowed from
 # the local machine.
-allow_anonymous true
+allow_anonymous false
+password_file /mosquitto/config/password
 
 # -----------------------------------------------------------------
 # Default authentication and topic access control
