--- a/docker-volumes/esphome/p1sm-02.yaml
+++ b/docker-volumes/esphome/p1sm-02.yaml
@@ -19,8 +19,13 @@ ota:
   password: "a245f40a9baad1fa4b2c151ecd9b73af"
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  networks:
+  - ssid: !secret wifi_ssid
+    password: !secret wifi_password
+  - ssid: !secret wifi_ssid1
+    password: !secret wifi_password1
+  - ssid: !secret wifi_ssid2
+    password: !secret wifi_password2
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
