--- a/docker-volumes/esphome/p1sn-01.yaml
+++ b/docker-volumes/esphome/p1sn-01.yaml
@@ -19,8 +19,13 @@ ota:
   password: "191842e63611f4c388d1ab947bf25c3c"
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  networks:
+  - ssid: !secret wifi_ssid
+    password: !secret wifi_password
+  # - ssid: !secret wifi_ssid1
+  #   password: !secret wifi_password1
+  # - ssid: !secret wifi_ssid2
+  #   password: !secret wifi_password2
 
   ap:
     ssid: "P1Sm-01 Fallback Hotspot"
@@ -56,7 +61,7 @@ sensor:
     name: p1sm-01 Uptime
     filters:
       - lambda: return x / 60.0;
-    unit_of_measurement: minutes
+    unit_of_measurement: min
     update_interval: 60s
 
   - platform: adc
