--- a/docker-volumes/esphome/p2ms-01.yaml
+++ b/docker-volumes/esphome/p2ms-01.yaml
@@ -20,8 +20,13 @@ ota:
   password: "2a6847f615744b65c91d17e300801152"
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  networks:
+  - ssid: !secret wifi_ssid
+    password: !secret wifi_password
+  # - ssid: !secret wifi_ssid1
+  #   password: !secret wifi_password1
+  # - ssid: !secret wifi_ssid2
+  #   password: !secret wifi_password2
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
@@ -79,4 +84,4 @@ sensor:
     name: Uptime
     filters:
       - lambda: return x / 60.0;
-    unit_of_measurement: minutes
+    unit_of_measurement: min
