--- a/docker-volumes/esphome/p1sm-01.yaml
+++ b/docker-volumes/esphome/p1sm-01.yaml
@@ -15,6 +15,11 @@ api:
   encryption:
     key: "taykU7lHYETc8xScEmVLSVba6MrHiWPb00+g2d30I4c="
 
+mqtt:
+  broker: 192.168.0.162
+  username: !secret mqtt_user
+  password: !secret mqtt_password    
+
 ota:
   password: "191842e63611f4c388d1ab947bf25c3c"
 
