deep sleep and mqtt

--- a/docker-volumes/esphome/p1sm-01.yaml
+++ b/docker-volumes/esphome/p1sm-01.yaml
@@ -11,14 +11,18 @@ esp32:
 logger:
 
 # Enable Home Assistant API
-api:
-  encryption:
-    key: "taykU7lHYETc8xScEmVLSVba6MrHiWPb00+g2d30I4c="
+# api:
+#   encryption:
+#     key: "taykU7lHYETc8xScEmVLSVba6MrHiWPb00+g2d30I4c="
 
 mqtt:
   broker: 192.168.0.162
   username: !secret mqtt_user
-  password: !secret mqtt_password    
+  password: !secret mqtt_password
+
+deep_sleep:
+  run_duration: 5s
+  sleep_duration: 15min     
 
 ota:
   password: "191842e63611f4c388d1ab947bf25c3c"
@@ -41,22 +45,22 @@ captive_portal:
 
 sensor:
   - platform: wifi_signal
-    name: p1sm-01 WiFi Signal
-    update_interval: 60s
+    name: WiFi Signal
+    update_interval: 5s
 
   - platform: uptime
-    name: p1sm-01 Uptime
+    name: Uptime
     filters:
       - lambda: return x / 60.0;
     unit_of_measurement: min
-    update_interval: 60s
+    update_interval: 5s
 
   - platform: adc
     pin: 3
     name: "Soil Moisture"
     unit_of_measurement: "%"
     device_class: MOISTURE
-    update_interval: 60s
+    update_interval: 5s
     attenuation: 11db
     filters:
     - calibrate_linear:
@@ -74,7 +78,7 @@ sensor:
     id: SM01_BV
     unit_of_measurement: "v"
     device_class: VOLTAGE
-    update_interval: 60s
+    update_interval: 5s
     attenuation: 11db
     filters:
     - multiply: 2.0
@@ -83,7 +87,7 @@ sensor:
     name: "Battery Life"
     unit_of_measurement: "%"
     device_class: BATTERY
-    update_interval: 60s
+    update_interval: 5s
     lambda: return id(SM01_BV).state;
     filters:
     - calibrate_polynomial:
