--- a/docker-volumes/homeassistant/configuration.yaml
+++ b/docker-volumes/homeassistant/configuration.yaml
@@ -13,6 +13,7 @@ frontend:
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
+mqtt: !include mqtt.yaml
 
 api:
 
